# desafio_tecnico

./: .env.example  README.md  deps.py  main.py  pyproject.toml  requirements.txt
analysis/: README.md  gerar_grafico.py  iris.py
database/: enums.py  inicializacao.py  models.py  populate.sql  schema.sql  utils.py
routes/: clientes.py  documentos.py  prazos.py  processos.py  procuradores.py
